--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/style.min.css" />
-  <link rel="icon" href="img/favicons/32.svg">
+  <link rel="icon" href="./img/favicons/32.svg">
   <title>HTML Academy: Седона</title>
 </head>
 
@@ -192,22 +192,23 @@
         <use xlink:href="#intro-sedona-svg"></use>
       </svg>
       <picture>
-        <img class="intro__img intro__img--sedona intro__img--form" src="img/intro-sedona.svg" alt="Sedona.">
+        <img class="intro__img intro__img--sedona intro__img--catalog" src="./img/intro-sedona.svg" alt="Sedona.">
       </picture>
     </div>
     <div class="content-title">
       <h1 class="content-title__head">Фото и видео</h1>
-      <h2 class="content-title__sub">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам
+      <h2 class="content-title__sub--catalog">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам
         забыть о политике и экономике.</h2>
     </div>
     <div class="content__block-card">
       <div class="content__card content__card--head card">
         <a class="picture-link" href="#">
           <picture>
-            <source media="(min-width: 1280px)" srcset="img/card-1-desktop.jpg" 1x, srcset="img/card-1-desktop@2x.jpg"
+            <source media="(min-width: 1280px)" srcset="./img/card-1-desktop.jpg" 1x,
+              srcset="./img/card-1-desktop@2x.jpg" 2x>
+            <source media="(min-width: 768px)" srcset="./img/card-1-tablet.jpg" 1x, srcset="./img/card-1-tablet@2x.jpg"
               2x>
-            <source media="(min-width: 768px)" srcset="img/card-1-tablet.jpg" 1x, srcset="img/card-1-tablet@2x.jpg" 2x>
-            <img class="card__image--title" src="img/card-1-mobile.jpg" srcset="img/card-1-mobile@2x.jpg"
+            <img class="card__image--title" src="./img/card-1-mobile.jpg" srcset="img/card-1-mobile@2x.jpg"
               alt="Народные просторы. Дорога, уходящая в закат.">
           </picture>
         </a>
@@ -217,8 +218,8 @@
           <div class="card__likes-block">
             <a class="like-link" href="#">
               <picture>
-                <source media="(min-width: 1280px)" srcset="img/white-like.svg">
-                <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
+                <source media="(min-width: 1280px)" srcset="./img/white-like.svg">
+                <img class="card__likes-img" src="./img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
               </picture>
               <p class="card__total-likes">1350</p>
             </a>
@@ -229,11 +230,11 @@
         <div class="content__card card">
           <a class="picture-link" href="#">
             <picture>
-              <source media="(min-width: 1280px)" srcset="img/card-2-desktop.jpg" 1x, srcset="img/card-2-desktop@2x.jpg"
-                2x>
-              <source media="(min-width: 768px)" srcset="img/card-2-tablet.jpg" 1x, srcset="img/card-2-tablet@2x.jpg"
-                2x>
-              <img class="card__image" src="img/card-2-mobile.jpg" srcset="img/card-2-mobile@2x.jpg"
+              <source media="(min-width: 1280px)" srcset="./img/card-2-desktop.jpg" 1x,
+                srcset="./img/card-2-desktop@2x.jpg" 2x>
+              <source media="(min-width: 768px)" srcset="./img/card-2-tablet.jpg" 1x,
+                srcset="./img/card-2-tablet@2x.jpg" 2x>
+              <img class="card__image" src="./img/card-2-mobile.jpg" srcset="./img/card-2-mobile@2x.jpg"
                 alt="Местная растительность. Кактус на фоне каньона.">
             </picture>
           </a>
@@ -243,8 +244,8 @@
             <div class="card__likes-block">
               <a class="like-link" href="#">
                 <picture>
-                  <source media="(min-width: 1280px)" srcset="img/white-like.svg">
-                  <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
+                  <source media="(min-width: 1280px)" srcset="./img/white-like.svg">
+                  <img class="card__likes-img" src="./img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
                 </picture>
                 <p class="card__total-likes">143</p>
               </a>
@@ -254,11 +255,11 @@
         <div class="content__card card">
           <a class="picture-link" href="#">
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/card-3-desktop.jpg" 1x, srcset="img/card-3-desktop@2x.jpg"
-                2x>
-              <source media="(min-width: 768px)" srcset="img/card-3-tablet.jpg" 1x, srcset="img/card-3-tablet@2x.jpg"
-                2x>
-              <img class="card__image" src="img/card-3-mobile.jpg" srcset="img/card-3-mobile@2x.jpg"
+              <source media="(min-width: 1200px)" srcset="./img/card-3-desktop.jpg" 1x,
+                srcset="./img/card-3-desktop@2x.jpg" 2x>
+              <source media="(min-width: 768px)" srcset="./img/card-3-tablet.jpg" 1x,
+                srcset="./img/card-3-tablet@2x.jpg" 2x>
+              <img class="card__image" src="./img/card-3-mobile.jpg" srcset="./img/card-3-mobile@2x.jpg"
                 alt="Дорога на север. Серпантиновая дорога среди горного леса.">
             </picture>
           </a>
@@ -268,22 +269,22 @@
             <div class="card__likes-block">
               <a class="like-link" href="#">
                 <picture>
-                  <source media="(min-width: 1200px)" srcset="img/white-like.svg">
-                  <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
+                  <source media="(min-width: 1200px)" srcset="./img/white-like.svg">
+                  <img class="card__likes-img" src="./img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
                 </picture>
-                <p class="card__total-likes">96</p>
               </a>
+              <p class="card__total-likes">96</p>
             </div>
           </div>
         </div>
         <div class="content__card card">
           <a class="picture-link" href="#">
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/card-4-desktop.jpg" 1x,
-                srcset="img/card-4-desktop@2x.jpg">
-              <source media="(min-width: 768px)" srcset="img/card-4-tablet.jpg" 1x, srcset="img/card-4-tablet@2x.jpg"
-                2x>
-              <img class="card__image" src="img/card-4-mobile.jpg" srcset="img/card-4-mobile@2x.jpg"
+              <source media="(min-width: 1200px)" srcset="./img/card-4-desktop.jpg" 1x,
+                srcset="./img/card-4-desktop@2x.jpg">
+              <source media="(min-width: 768px)" srcset="./img/card-4-tablet.jpg" 1x,
+                srcset="./img/card-4-tablet@2x.jpg" 2x>
+              <img class="card__image" src="./img/card-4-mobile.jpg" srcset="./img/card-4-mobile@2x.jpg"
                 alt="Мост Дьявола. Фото каньона и простор.">
             </picture>
           </a>
@@ -293,8 +294,8 @@
             <div class="card__likes-block">
               <a class="like-link" href="#">
                 <picture>
-                  <source media="(min-width: 1280px)" srcset="img/white-like.svg">
-                  <img class="card__likes-img" src="img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
+                  <source media="(min-width: 1280px)" srcset="./img/white-like.svg">
+                  <img class="card__likes-img" src="./img/card-like-img.svg" alt="Иконка лайков. Количество лайков:">
                 </picture>
                 <p class="card__total-likes">254</p>
               </a>
@@ -305,19 +306,19 @@
     </div>
     <div class="content__video video">
       <h2 class="video__title">Все еще сомневаетесь?</h2>
-      <h3 class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
-        очередной раз!</h3>
+      <h3 class="video__description">Смотрите&nbsp;видеопрезентацию&nbsp;и
+        скорее&nbsp;за&nbsp;билетами,&nbsp;пока&nbsp;они&nbsp;не подорожали&nbsp;в&nbsp;очередной&nbsp;раз!</h3>
       <picture>
-        <source media="(min-width: 1200px)" srcset="img/video-desktop.svg">
-        <source media="(min-width: 768px)" srcset="img/video-tablet.svg">
-        <img class="video-player" src="img/video-player.jpg" alt="Видеоплеер.">
+        <source media="(min-width: 1200px)" srcset="./img/video-desktop.svg">
+        <source media="(min-width: 768px)" srcset="./img/video-tablet.svg">
+        <img class="video-player" src="./img/video-player.jpg" alt="Видеоплеер.">
       </picture>
       <button class="player-button" type="button">
       </button>
     </div>
   </main>
 
-  <footer class="footer theme-light">
+  <footer class="footer footer-catalog theme-light">
     <span class="footer__title">#visitSEDONA</span>
     <ul class="footer__socials socials">
       <li class="socials__item"><a class="socials__link" href="#"><span class="visually-hidden">VKontakte</span>
