--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/style.min.css" />
-  <link rel="icon" href="img/favicons/32.svg">
+  <link rel="icon" href="./img/favicons/32.svg">
   <title>HTML Academy: Седона</title>
 </head>
 
@@ -171,8 +171,8 @@
   <main class="content">
     <div class="content__intro-index intro">
       <picture>
-        <source media="(min-width: 768px)" srcset="img/intro-index-desktop.svg">
-        <img class="intro__img intro__img--index " src="img/index-intro-text.svg"
+        <source media="(min-width: 768px)" srcset="./img/intro-index-desktop.svg">
+        <img class="intro__img intro__img--index " src="./img/index-intro-text.svg"
           alt="Welcome yo the gergeous. Sedona. Because the Gtand Canyon sucks!">
       </picture>
     </div>
@@ -195,11 +195,11 @@
         </div>
         <div class="advantages__city">
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/photo-city-desktop.jpg" 1x,
-              srcset="img/photo-city-desktop@2x.jpg" 2x>
+            <source media="(min-width: 1200px)" srcset="./img/photo-city-desktop.jpg" 1x,
+              srcset="./img/photo-city-desktop@2x.jpg" 2x>
             <source media="(min-width: 768px)" srcset="img/photo-city-tablet.jpg" 1x,
-              srcset="img/photo-city-tablet@2x.jpg" 2x>
-            <img class="advantages__city-img" src="img/photo-city-mobile.jpg" srcset="img/photo-city-mobile@2x.jpg"
+              srcset="./img/photo-city-tablet@2x.jpg" 2x>
+            <img class="advantages__city-img" src="./img/photo-city-mobile.jpg" srcset="./img/photo-city-mobile@2x.jpg"
               alt="Фото города.">
           </picture>
         </div>
@@ -213,7 +213,7 @@
               fill="#81B3D2" />
           </svg>
           <h2 class="advantages-list__title">Жильё</h2>
-          <h3 class="advantages-list__sub">Рекомендуем пожить в настоящем&nbsp;мотеле, все как в кино!</h3>
+          <h3 class="advantages-list__sub">Рекомендуем&nbsp;пожить&nbsp;в настоящем мотеле, все как в кино!</h3>
         </li>
         <li class="advantages__list advantages-list theme-light">
           <svg class="advantages__list--burger-svg" width="76" height="69" viewBox="0 0 76 69" fill="currentColor"
@@ -234,25 +234,24 @@
               fill="#81B3D2" />
           </svg>
           <h2 class="advantages-list__title advantages-list__title--gift">Сувениры</h2>
-          <h3 class="advantages-list__sub advantages-list__sub--gift">Не&nbsp;только&nbsp;китайского, но и
-            местного&nbsp;производства!</h3>
+          <h3 class="advantages-list__sub advantages-list__sub--gift">Не&nbsp;только&nbsp;китайского, но и местного&nbsp;производства!</h3>
         </li>
       </ul>
       <div class="advantages__about-bridge">
         <div class="advantages__item advantages-item advantages-item--bridge theme-dark">
           <h2 class="advantages-item__title advantages-item__title--bridge">Там есть мост&nbsp;Дьявола</h2>
           <h3 class="advantages-item__sub advantages-item__sub--bridge">— №2 —</h3>
-          <h4 class="advantages-item__description advantages-item__description--bridge">Да, по нему можно пройти!
-            Если&nbsp;Вы осмелитесь, конечно</h4>
+          <h4 class="advantages-item__description advantages-item__description--bridge">Да,&nbsp;по&nbsp;нему&nbsp;можно пройти!
+            Если&nbsp;Вы осмелитесь,&nbsp;конечно</h4>
         </div>
         <div class="advantages__bridge-photo">
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop.jpg" 1x,
-              srcset="img/photo-bridge-desktop@2x.jpg" 2x>
-            <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet.jpg" 1x,
-              srcset="img/photo-bridge-tablet@2x.jpg" 2x>
-            <img class="advantages__bridge-photo-img" src="img/photo-bridge-mobile.jpg"
-              srcset="img/photo-bridge-mobile@2x.jpg" alt="Вид на каньон сверху.">
+            <source media="(min-width: 1200px)" srcset="./img/photo-bridge-desktop.jpg" 1x,
+              srcset="./img/photo-bridge-desktop@2x.jpg" 2x>
+            <source media="(min-width: 768px)" srcset="./img/photo-bridge-tablet.jpg" 1x,
+              srcset="./img/photo-bridge-tablet@2x.jpg" 2x>
+            <img class="advantages__bridge-photo-img" src="./img/photo-bridge-mobile.jpg"
+              srcset="./img/photo-bridge-mobile@2x.jpg" alt="Вид на каньон сверху.">
           </picture>
         </div>
       </div>
@@ -260,7 +259,7 @@
         <li class="text-index text theme-modified">
           <h2 class="text__title--index">Небольшая площадь</h2>
           <h3 class="text__sub--index">— №3 —</h3>
-          <h4 class="text__description--index">Все&nbsp;интересные&nbsp;места находятся очень&nbsp;близко</h4>
+          <h4 class="text__description--index">Все&nbsp;интересные&nbsp;места находятся очень близко</h4>
         </li>
         <li class="text-index text theme-modified">
           <h2 class="text__title--index text__title--road">Красивая дорога</h2>
