--- a/source/catalog.html
+++ b/source/catalog.html
@@ -196,8 +196,8 @@
       </picture>
     </div>
     <div class="content-title">
-      <h1 class="content-title__head">Фото и видео</h1>
-      <h2 class="content-title__sub--catalog">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам
+      <h1 class="content-title__head content-title__head--catalog">Фото и видео</h1>
+      <h2 class="content-title__sub content-title__sub--catalog">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам
         забыть о политике и экономике.</h2>
     </div>
     <div class="content__block-card">
@@ -208,11 +208,11 @@
               srcset="./img/card-1-desktop@2x.jpg" 2x>
             <source media="(min-width: 768px)" srcset="./img/card-1-tablet.jpg" 1x, srcset="./img/card-1-tablet@2x.jpg"
               2x>
-            <img class="card__image--title" src="./img/card-1-mobile.jpg" srcset="img/card-1-mobile@2x.jpg"
+            <img class="card__image-title" src="./img/card-1-mobile.jpg" srcset="img/card-1-mobile@2x.jpg"
               alt="Народные просторы. Дорога, уходящая в закат.">
           </picture>
         </a>
-        <div class="card__content--block card__content--block-head">
+        <div class="card__content-block card__content-block-head">
           <h2 class=card__content-title>Неродные просторы</h2>
           <p class="card__content">Автор фото: Борис</p>
           <div class="card__likes-block">
@@ -238,7 +238,7 @@
                 alt="Местная растительность. Кактус на фоне каньона.">
             </picture>
           </a>
-          <div class="card__content--block">
+          <div class="card__content-block">
             <h2 class=card__content-title>Местная&nbsp;растительность</h2>
             <p class="card__content">Автор фото: Сергей</p>
             <div class="card__likes-block">
@@ -263,7 +263,7 @@
                 alt="Дорога на север. Серпантиновая дорога среди горного леса.">
             </picture>
           </a>
-          <div class="card__content--block card__content--block-theme">
+          <div class="card__content-block card__content-block-theme">
             <h2 class=card__content-title>Дорога на север</h2>
             <p class="card__content">Автор фото: Петр</p>
             <div class="card__likes-block">
@@ -288,7 +288,7 @@
                 alt="Мост Дьявола. Фото каньона и простор.">
             </picture>
           </a>
-          <div class="card__content--block">
+          <div class="card__content-block">
             <h2 class=card__content-title>Мост Дьявола</h2>
             <p class="card__content">Автор фото: Антон</p>
             <div class="card__likes-block">
@@ -306,8 +306,8 @@
     </div>
     <div class="content__video video">
       <h2 class="video__title">Все еще сомневаетесь?</h2>
-      <h3 class="video__description">Смотрите&nbsp;видеопрезентацию&nbsp;и
-        скорее&nbsp;за&nbsp;билетами,&nbsp;пока&nbsp;они&nbsp;не подорожали&nbsp;в&nbsp;очередной&nbsp;раз!</h3>
+      <h3 class="video__description">Смотрите видеопрезентацию и
+        скорее за билетами, пока они не подорожали в очередной раз!</h3>
       <picture>
         <source media="(min-width: 1200px)" srcset="./img/video-desktop.svg">
         <source media="(min-width: 768px)" srcset="./img/video-tablet.svg">
@@ -318,7 +318,7 @@
     </div>
   </main>
 
-  <footer class="footer footer-catalog theme-light">
+  <footer class="footer footer--catalog theme-light">
     <span class="footer__title">#visitSEDONA</span>
     <ul class="footer__socials socials">
       <li class="socials__item"><a class="socials__link" href="#"><span class="visually-hidden">VKontakte</span>
